# ReminderApp

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  setup.iss
src/: ReminderManager.cpp  ReminderManager.h  ReminderWidget.cpp  ReminderWidget.h  main.cpp
